--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,7 @@
   padding-left: 10px;
 }
 
-.decor__margin {
+.header__subtitle {
   margin: 0 10px 20px;
 }
 
@@ -181,6 +181,12 @@
   border: 1px solid var(--text-block-color);
 }
 
+.text_article {
+  display: grid;
+  gap: 10px;
+  padding-block-start: 20px;
+}
+
 .thin {
   font-weight: 400;
 }
@@ -223,10 +229,6 @@
   .header__theme-menu {
     padding-right: 20px;
   }
-
-  .decor__margin {
-    margin: -20px 20px 20px;
-  }
   
   .rec-decoration {
     top: 21px;
@@ -259,9 +261,14 @@
     gap: 20px;
   }
 
+  .blocks__flexible {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-column: span 3;
+  }
+
   .horizontal {
-    display: flex;
-    flex-direction: column;
+    grid-template-columns: auto 1fr;
   }
 
   .horizontal .title {
@@ -282,10 +289,24 @@
     justify-self: end;
     align-self: center;
     max-inline-size: 365px;
+    margin: -20px 20px 20px;
   }
 
   .title {
     grid-area: title;
+  }
+
+  .title__what {
+    grid-column: span 3;
+  }
+
+  .text_article {
+    padding: 0;
+    padding-block-start: 0;
+  }
+
+  .text__article {
+    padding-bottom: 22px;
   }
 
   .text__block {
@@ -338,6 +359,7 @@
   .footer__text {
     margin: 0px;
   }
+  
 }
 
 @media (width >= 1024px) {
@@ -360,10 +382,6 @@
     margin-right: 280px;
   }
 
-  .decor__margin {
-    margin: 0 20px 20px;
-  }
-
   .main {
     height: 3472px;
     padding: 62px 20px;
@@ -373,25 +391,32 @@
     padding-left: 0px;
   }
 
+  .text_article {
+    padding-block-start: 20px;
+  }
+
   .block {
     grid-template-columns: 315px 1fr;
   }
 
+  .blocks__flexible {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(236px, 1fr));
+    gap: 20px;
+    margin-bottom: -41.5px;
+  }
+
   .header__subtitle {
     max-inline-size: 491px;
+    margin: 0 20px 20px;
   }
 
   .horizontal .title {
     min-width: 315px;
   }
 
-  .horizontal .blocks {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .text__block {
-    flex: 1;
+  .title__what {
+    margin-bottom: -17px;
   }
 
   .image {
